objects/adapps__OptimizerPlus_User_Logins__c.object
<CustomObject>
    <fields>
        <fullName>adapps__Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>adapps__OptimizerPlus_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>adapps__Feature_Type__c</fullName>
        <label>Feature Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>adapps__OptimizerPlus_Feature</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>adapps__Has_Any_500_users__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Any 500 users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>adapps__Implementation_Effort__c</fullName>
        <label>Implementation Effort</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>adapps__OptimizerPlus_Implementation_Effort</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>adapps__Optimizer_Report__c</fullName>
        <label>Optimizer Report</label>
        <referenceTo>adapps__Optimizer_Report__c</referenceTo>
        <relationshipLabel>User Login</relationshipLabel>
        <relationshipName>User_Login</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>adapps__Org_Item_Count__c</fullName>
        <label>Org Item Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>adapps__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>adapps__OptimizerPlus_Status</valueSetName>
        </valueSet>
    </fields>
    <label>User Logins</label>
    <nameField>
        <label>User Logins</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Logins</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>